# caoren

./: CMakeLists.txt  README.md  Singleton.cpp  Singleton.h  main.cpp
Builder_Pattern/: CmakeLists.txt  Director.cpp  build.h  concretBuild.cpp  main.cpp  product.h
Factory_Pattern/: CMakeLists.txt  Factory.cpp  Factory.h  Product.cpp  Product.h  main.cpp
Prototype_Pattern/: CMakeLists.txt  circle.h  main.cpp  rectangle.h  shape.h
SingleInstance/: CMakeLists.txt  Singleton.cpp  main.cpp
